# cinna-tool

./: .env.example  .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts
electron/: LICENSE  README.md  electron-builder.yml  package.json
electron/scripts/: dev.js  prune-electron-package.cjs
electron/src/: main.ts
electron/src/main-process/: types.ts
electron/src/preload/: index.ts
electron/src/renderer/: index.html
scripts/: clean-build.mjs  dev.js  wait-and-launch.js
src/: main.ts  preload.ts  tray.ts
src/assets/: icon.icns
src/main-process/: types.ts
src/main-process/app/: shortcuts.ts  tray.ts
src/main-process/ipc/: appHandlers.ts  claudeCodeHandlers.ts  dialog.ts  documentHandlers.ts  index.ts  storeHandlers.ts  windowHandlers.ts
src/main-process/services/: claudeCode.ts  homeDashboard.ts  media.ts
src/main-process/utils/: assets.ts
src/main-process/windows/: mainWindow.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/renderer/app/: App.tsx  index.css
src/renderer/components/: TodoFilter.tsx  TodoInput.tsx  TodoItem.tsx  TodoList.tsx  TopBar.tsx  UserMenu.tsx  index.ts
src/renderer/i18n/: translations.ts  useTranslation.ts
src/renderer/services/: aiService.ts
supabase/: README.md  account.sql
tauri/: package.json  tsconfig.json  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: lib.rs  main.rs
(+255 files in other folders)
