[package]
name = "cinna-tools-tauri"
version = "1.0.0"
description = "CinnaTool Tauri desktop application"
authors = ["Cinna"]
edition = "2021"

[lib]
name = "cinna_tools_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
